--- a/src/template.html
+++ b/src/template.html
@@ -34,6 +34,7 @@
                         <div class="weather-info">
                             <h4 id="weather-data"></h4>
                             <p id="description"></p>
+                            <img class="weather-icon" alt="" />
                         </div>
                     </div>
                     <div class="temperature">
