--- a/src/template.html
+++ b/src/template.html
@@ -24,8 +24,8 @@
                         <p class="city-name"></p>
                     </div>
                     <form class="city-form">
-                        <input name="city" id="city" type="text" required placeholder="Enter city e.g Nairobi">
-                        <button id="submit-btn" type="submit">Send</button>
+                        <input name="city" id="city" type="text" required placeholder="Enter city...">
+                        <button id="submit-btn" type="submit">Search</button>
                     </form>
                 </div>
                 <div class="info">
@@ -41,9 +41,18 @@
                         <h3>Temperature</h3>
                         <div class="temperature-data">
                             <h4 id="temp"></h4>
-                            <p id="temp-feel"></p>
-                            <p id="temp-max"></p>
-                            <p id="temp-min"></p>
+                            <div class="other-temp">
+                                <p>Feels Like</p>
+                                <h6 id="temp-feel"></h6>
+                            </div>
+                            <div class="other-temp">
+                                <p>Maximum</p>
+                                <h6 id="temp-max"></h6>
+                            </div>
+                            <div class="other-temp">
+                                <p>Minimum</p>
+                                <h6 id="temp-min"></h6>
+                            </div>
                         </div>
                     </div>
                     <div class="humidity">
@@ -56,6 +65,18 @@
                         <h3>Pressure</h3>
                         <div class="pressure-data">
                             <h4 id="atm-pressure"></h4>
+                        </div>
+                    </div>
+                    <div class="visibility">
+                        <h3>Visibility</h3>
+                        <div class="visibility-data">
+                            <h4 id="visible"></h4>
+                        </div>
+                    </div>
+                    <div class="wind">
+                        <h3>Wind Speed</h3>
+                        <div class="wind-data">
+                            <h4 id="wind-sp"></h4>
                         </div>
                     </div>
                 </div>
