--- a/src/template.html
+++ b/src/template.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="shortcut icon" href=<%=require("./weather.png")%> type="image/x-icon">
 </head>
 <body>
     <div class="main">
-        <div class="header">
-            <div class="logo">
-                <span class="part-1">Hali</span>
-                <span class="part-2">ya</span>
-                <span class="part-3">Anga</span>
-            </div>
-        </div>
         <div class="weather-main">
-            <div id="error"></div>
+            <div class="header">
+                <div class="logo">
+                    <img class="main-icon" alt="" />
+                    <h3>Weather App</h3>
+                </div>
+            </div>
+            <div id="error">fff</div>
             <div class="weather-display">
                 <div class="form-section">
                     <div class="city-display">
@@ -24,58 +24,56 @@
                         <p class="city-name"></p>
                     </div>
                     <form class="city-form">
-                        <input name="city" id="city" type="text" required placeholder="Enter city...">
-                        <button id="submit-btn" type="submit">Search</button>
+                        <div class="form-input">
+                            <input name="city" id="city" type="text" required placeholder="Enter city...">
+                            <button id="submit-btn" type="submit"><img class="search-icon" alt="" /></button>
+                        </div>
                     </form>
                 </div>
                 <div class="info">
                     <div class="weather">
-                        <h3>Weather</h3>
                         <div class="weather-info">
-                            <h4 id="weather-data"></h4>
-                            <p id="description"></p>
+                            <h4 id="weather-data">Clouds</h4>
+                            <p id="description">Broken Clouds</p>
                             <img class="weather-icon" alt="" />
                         </div>
                     </div>
+                    <div class="visibility">
+                        <div class="data">
+                            <h3>Visibility</h3>
+                            <h4 id="visible"></h4>
+                        </div>
+                    </div>
                     <div class="temperature">
-                        <h3>Temperature</h3>
                         <div class="temperature-data">
                             <h4 id="temp"></h4>
                             <div class="other-temp">
                                 <p>Feels Like</p>
                                 <h6 id="temp-feel"></h6>
                             </div>
-                            <div class="other-temp">
-                                <p>Maximum</p>
-                                <h6 id="temp-max"></h6>
-                            </div>
-                            <div class="other-temp">
-                                <p>Minimum</p>
-                                <h6 id="temp-min"></h6>
-                            </div>
                         </div>
                     </div>
                     <div class="humidity">
-                        <h3>Humidity</h3>
-                        <div class="humidity-data">
+                        <div class="data">
+                            <h3>Humidity</h3>
                             <h4 id="hum"></h4>
                         </div>
                     </div>
                     <div class="pressure">
-                        <h3>Pressure</h3>
-                        <div class="pressure-data">
+                        <div class="data pressure">
+                            <h3>Pressure</h3>
                             <h4 id="atm-pressure"></h4>
                         </div>
                     </div>
-                    <div class="visibility">
-                        <h3>Visibility</h3>
-                        <div class="visibility-data">
-                            <h4 id="visible"></h4>
+                    <div class="wind-direction">
+                        <div class="data">
+                            <h3>Wind Direction</h3>
+                            <h4 id="wind-dir">29</h4>
                         </div>
                     </div>
-                    <div class="wind">
-                        <h3>Wind Speed</h3>
-                        <div class="wind-data">
+                    <div class="wind-speed">
+                        <div class="data">
+                            <h3>Wind Speed</h3>
                             <h4 id="wind-sp"></h4>
                         </div>
                     </div>
