--- a/src/template.html
+++ b/src/template.html
@@ -16,9 +16,10 @@
                     <h3>Weather App</h3>
                 </div>
             </div>
-            <div id="error">fff</div>
+            <div id="error"></div>
             <div class="weather-display">
                 <div class="form-section">
+                    <div class="date"></div>
                     <div class="city-display">
                         <img class="location-icon" alt="" />
                         <p class="city-name"></p>
